syntax = "proto2";

import "message.proto";

package im;

service Api {
    rpc GetConnections(EmptyRequest) returns (ConnectionList) {}
    rpc Send(protobuf.Message) returns (Result) {}
    rpc Broadcast(protobuf.Message) returns (Result) {}
    rpc Online(OnlineRequest) returns (OnlineResult) {}
    rpc Kick(KickRequest) returns (Result) {}
}

message EmptyRequest {

}

message ConnectionList {
    repeated string userIds = 1;
}

message OnlineRequest {
    required string targetId  = 1;
}

message OnlineResult {
    required bool result    = 1;
}

message KickRequest {
    required string targetId  = 1;
}

enum ResultType {
    SUCCESS = 1;
    FAILURE = 2;
}

message Result {
    required ResultType result = 1;
}
