syntax = "proto3";

package protocol;

message Segment {
    int64 id          = 1; // One message one id, even though a message's been splited into packages
    int32 index       = 2;
    int32 total       = 3;
    int32 ack         = 4; // bool
    bytes body        = 5; // Message.Marshal()
}

message Message {
    int64 id          = 1; // time, nano unix
    string userId     = 2; // message from (peer)
    string targetId   = 3; // message to (peer)
    string groupId    = 4; // message to (group)
    int32 action      = 5; // CHAT, UPLOAD(UDP:P2P), SYSTEM, FRIEND_REQUESTED, FRIEND_REFUSED, FRIEND_ACCEPTED, GROUP_JOIN_REQUESTED, ...
    int32 ack         = 6; // NONE(WHEN SEND), TRANSMITTED, RECEIVED, READ, OPERATED(PLAY, DOWNLOAD), ...
    int32 type        = 7; // TEXT, JSON, XML, JPEG, PNG, AUDIO, VIDEO, FILE, ...
    bytes body        = 8; // content, size may be huge
}